
syntax = "proto3";

option csharp_namespace = "Sr.Grpc.gen";

package streaming;

message MyTask
{
  int32 max = 1;
}

message Number
{
  int32 value = 1;
}

message Report
{
  int32 count = 1;
  int64 processorTime = 2;
}

service StreamTester {
  rpc GeneratePrimeNumbers(MyTask) returns (stream Number) {}
  rpc CountPrimeNumbers(stream Number) returns (Report) {}
}
